# ChASE

./: CMakeLists.txt  polaris_install.sh
ChASE-MPI/: CMakeLists.txt  blas_templates.inc  chase_mpi.hpp  chase_mpi_matrices.hpp  chase_mpi_properties.hpp  mpi_wrapper.hpp
ChASE-MPI/impl/: chase_mpidla.hpp  chase_mpidla_cuda_seq.hpp  chase_mpidla_mgpu.hpp  chase_mpidla_mgpu_um.hpp  chase_mpidla_um.hpp
algorithm/: algorithm.inc
examples/0_hello_world/: 0_hello_world.cpp  CMakeLists.txt
examples/1_sequence_eigenproblems/: 1_sequence_eigenproblems.cpp  CMakeLists.txt
examples/2_input_output/: 2_input_output.cpp  CMakeLists.txt
examples/3_installation/: chase-app.cpp
examples/4_interface/: CMakeLists.txt
interface/: chase_c.cpp
tests/: noinput.cpp
